fix: close button spacing

--- a/packages/components/src/components/telekom/telekom-mobile-flyout-canvas/telekom-mobile-flyout-canvas.css
+++ b/packages/components/src/components/telekom/telekom-mobile-flyout-canvas/telekom-mobile-flyout-canvas.css
@@ -51,7 +51,7 @@
 [part~='close-button'] {
   position: absolute;
   top: var(--telekom-spacing-unit-x2);
-  right: var(--telekom-spacing-unit-x2);
+  right: var(--telekom-spacing-unit-x4);
   --color-ghost: var(--telekom-color-text-and-icon-standard);
 }
 
